feat: button stuff

--- a/packages/tokens/src/tokens.css
+++ b/packages/tokens/src/tokens.css
@@ -5,3 +5,9 @@
 @import "./colors/purple.css" layer(uiid.tokens.colors);
 @import "./colors/red.css" layer(uiid.tokens.colors);
 @import "./colors/yellow.css" layer(uiid.tokens.colors);
+
+:root {
+  --spacing_scale: 0.25rem;
+  --spacing_scale_inline: var(--spacing_scale);
+  --spacing_scale_block: var(--spacing_scale);
+}
