--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -61,6 +61,18 @@
 body {
   background-color: var(--shade-background);
   color: var(--shade-foreground);
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
