--- a/packages/ui/src/components/forms/styles.css
+++ b/packages/ui/src/components/forms/styles.css
@@ -165,6 +165,7 @@
   color: var(--input-bookend-font-color);
   font-size: var(--input-bookend-font-size);
   font-weight: var(--input-bookend-font-weight);
+  height: 100%;
   text-wrap: nowrap;
   width: fit-content;
 }
