--- a/packages/ui/src/components/forms/styles.css
+++ b/packages/ui/src/components/forms/styles.css
@@ -168,6 +168,13 @@
   height: 100%;
   text-wrap: nowrap;
   width: fit-content;
+
+  &[data-is-string="true"]:first-child {
+    padding-inline-start: var(--formfield-padding-x);
+  }
+  &[data-is-string="true"]:last-child {
+    padding-inline-end: var(--formfield-padding-x);
+  }
 }
 
 [data-uiid="select"] {
