--- a/packages/ui/src/components/typography/text/text.styles.css
+++ b/packages/ui/src/components/typography/text/text.styles.css
@@ -7,89 +7,57 @@
 
   /* level styles */
   &:where([level="0"]) {
-    font-size: var(--text_0_size);
-    font-weight: var(--text_0_weight);
-    letter-spacing: var(--text_0_leading);
-    line-height: var(--text_0_line_height);
+    font-size: var(--text-0-size);
+    font-weight: var(--text-0-weight);
+    letter-spacing: var(--text-0-leading);
+    line-height: var(--text-0-lineHeight);
   }
   &:where([level="1"]) {
-    font-size: var(--text_1_size);
-    font-weight: var(--text_1_weight);
-    letter-spacing: var(--text_1_leading);
-    line-height: var(--text_1_line_height);
+    font-size: var(--text-1-size);
+    font-weight: var(--text-1-weight);
+    letter-spacing: var(--text-1-leading);
+    line-height: var(--text-1-lineHeight);
   }
   &:where([level="2"]) {
-    font-size: var(--text_2_size);
-    font-weight: var(--text_2_weight);
-    letter-spacing: var(--text_2_leading);
-    line-height: var(--text_2_line_height);
+    font-size: var(--text-2-size);
+    font-weight: var(--text-2-weight);
+    letter-spacing: var(--text-2-leading);
+    line-height: var(--text-2-lineHeight);
   }
   &:where([level="3"]) {
-    font-size: var(--text_3_size);
-    font-weight: var(--text_3_weight);
-    letter-spacing: var(--text_3_leading);
-    line-height: var(--text_3_line_height);
+    font-size: var(--text-3-size);
+    font-weight: var(--text-3-weight);
+    letter-spacing: var(--text-3-leading);
+    line-height: var(--text-3-lineHeight);
   }
   &:where([level="4"]) {
-    font-size: var(--text_4_size);
-    font-weight: var(--text_4_weight);
-    letter-spacing: var(--text_4_leading);
-    line-height: var(--text_4_line_height);
+    font-size: var(--text-4-size);
+    font-weight: var(--text-4-weight);
+    letter-spacing: var(--text-4-leading);
+    line-height: var(--text-4-lineHeight);
   }
   &:where([level="5"]) {
-    font-size: var(--text_5_size);
-    font-weight: var(--text_5_weight);
-    letter-spacing: var(--text_5_leading);
-    line-height: var(--text_5_line_height);
+    font-size: var(--text-5-size);
+    font-weight: var(--text-5-weight);
+    letter-spacing: var(--text-5-leading);
+    line-height: var(--text-5-lineHeight);
   }
   &:where([level="6"]) {
-    font-size: var(--text_6_size);
-    font-weight: var(--text_6_weight);
-    letter-spacing: var(--text_6_leading);
-    line-height: var(--text_6_line_height);
+    font-size: var(--text-6-size);
+    font-weight: var(--text-6-weight);
+    letter-spacing: var(--text-6-leading);
+    line-height: var(--text-6-lineHeight);
   }
   &:where([level="7"]) {
-    font-size: var(--text_7_size);
-    font-weight: var(--text_7_weight);
-    letter-spacing: var(--text_7_leading);
-    line-height: var(--text_7_line_height);
+    font-size: var(--text-7-size);
+    font-weight: var(--text-7-weight);
+    letter-spacing: var(--text-7-leading);
+    line-height: var(--text-7-lineHeight);
   }
   &:where([level="8"]) {
-    font-size: var(--text_8_size);
-    font-weight: var(--text_8_weight);
-    letter-spacing: var(--text_8_leading);
-    line-height: var(--text_8_line_height);
+    font-size: var(--text-8-size);
+    font-weight: var(--text-8-weight);
+    letter-spacing: var(--text-8-leading);
+    line-height: var(--text-8-lineHeight);
   }
-
-  /* shade styles */
-  /* &:where([shade="positive"]) {
-    color: var(--shade_positive);
-  }
-  &:where([shade="negative"]) {
-    color: var(--shade_negative);
-  }
-  &:where([shade="cautious"]) {
-    color: var(--shade_cautious);
-  }
-  &:where([shade="pressing"]) {
-    color: var(--shade_pressing);
-  }
-  &:where([shade="informative"]) {
-    color: var(--shade_informative);
-  }
-  &:where([shade="muted"]) {
-    color: var(--shade_muted);
-  }
-  &:where([shade="accent"]) {
-    color: var(--shade_accent);
-  }
-  &:where([shade="halftone"]) {
-    color: var(--shade_halftone);
-  }
-  &:where([shade="foreground"]) {
-    color: var(--shade_foreground);
-  }
-  &:where([shade="background"]) {
-    color: var(--shade_background);
-  } */
 }
