refactor: token cleanup

--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -1,5 +1,5 @@
-@import "./styles/primitives/colors.css";
-@import "./styles/primitives/spacing.css";
+@import "./css/primitives/colors.tokens.css";
+@import "./css/primitives/spacing.tokens.css";
 
 :root {
   --white: white;
