--- a/packages/ui/src/components/buttons/button/button.styles.css
+++ b/packages/ui/src/components/buttons/button/button.styles.css
@@ -1,3 +1,5 @@
+@import "@uiid/tokens/components/button.tokens.css";
+
 [uiid="button"] {
   --button-bg: var(--shade-foreground);
   --button-fg: var(--shade-background);
