--- a/packages/ui/src/components/typography/text/text.styles.css
+++ b/packages/ui/src/components/typography/text/text.styles.css
@@ -9,57 +9,57 @@
 
   /* level styles */
   &:where([level="0"]) {
-    font-size: var(--text-0-size);
-    font-weight: var(--text-0-weight);
-    letter-spacing: var(--text-0-leading);
-    line-height: var(--text-0-lineHeight);
+    font-size: var(--typography-text-0-size);
+    font-weight: var(--typography-text-0-weight);
+    letter-spacing: var(--typography-text-0-leading);
+    line-height: var(--typography-text-0-lineHeight);
   }
   &:where([level="1"]) {
-    font-size: var(--text-1-size);
-    font-weight: var(--text-1-weight);
-    letter-spacing: var(--text-1-leading);
-    line-height: var(--text-1-lineHeight);
+    font-size: var(--typography-text-1-size);
+    font-weight: var(--typography-text-1-weight);
+    letter-spacing: var(--typography-text-1-leading);
+    line-height: var(--typography-text-1-lineHeight);
   }
   &:where([level="2"]) {
-    font-size: var(--text-2-size);
-    font-weight: var(--text-2-weight);
-    letter-spacing: var(--text-2-leading);
-    line-height: var(--text-2-lineHeight);
+    font-size: var(--typography-text-2-size);
+    font-weight: var(--typography-text-2-weight);
+    letter-spacing: var(--typography-text-2-leading);
+    line-height: var(--typography-text-2-lineHeight);
   }
   &:where([level="3"]) {
-    font-size: var(--text-3-size);
-    font-weight: var(--text-3-weight);
-    letter-spacing: var(--text-3-leading);
-    line-height: var(--text-3-lineHeight);
+    font-size: var(--typography-text-3-size);
+    font-weight: var(--typography-text-3-weight);
+    letter-spacing: var(--typography-text-3-leading);
+    line-height: var(--typography-text-3-lineHeight);
   }
   &:where([level="4"]) {
-    font-size: var(--text-4-size);
-    font-weight: var(--text-4-weight);
-    letter-spacing: var(--text-4-leading);
-    line-height: var(--text-4-lineHeight);
+    font-size: var(--typography-text-4-size);
+    font-weight: var(--typography-text-4-weight);
+    letter-spacing: var(--typography-text-4-leading);
+    line-height: var(--typography-text-4-lineHeight);
   }
   &:where([level="5"]) {
-    font-size: var(--text-5-size);
-    font-weight: var(--text-5-weight);
-    letter-spacing: var(--text-5-leading);
-    line-height: var(--text-5-lineHeight);
+    font-size: var(--typography-text-5-size);
+    font-weight: var(--typography-text-5-weight);
+    letter-spacing: var(--typography-text-5-leading);
+    line-height: var(--typography-text-5-lineHeight);
   }
   &:where([level="6"]) {
-    font-size: var(--text-6-size);
-    font-weight: var(--text-6-weight);
-    letter-spacing: var(--text-6-leading);
-    line-height: var(--text-6-lineHeight);
+    font-size: var(--typography-text-6-size);
+    font-weight: var(--typography-text-6-weight);
+    letter-spacing: var(--typography-text-6-leading);
+    line-height: var(--typography-text-6-lineHeight);
   }
   &:where([level="7"]) {
-    font-size: var(--text-7-size);
-    font-weight: var(--text-7-weight);
-    letter-spacing: var(--text-7-leading);
-    line-height: var(--text-7-lineHeight);
+    font-size: var(--typography-text-7-size);
+    font-weight: var(--typography-text-7-weight);
+    letter-spacing: var(--typography-text-7-leading);
+    line-height: var(--typography-text-7-lineHeight);
   }
   &:where([level="8"]) {
-    font-size: var(--text-8-size);
-    font-weight: var(--text-8-weight);
-    letter-spacing: var(--text-8-leading);
-    line-height: var(--text-8-lineHeight);
+    font-size: var(--typography-text-8-size);
+    font-weight: var(--typography-text-8-weight);
+    letter-spacing: var(--typography-text-8-leading);
+    line-height: var(--typography-text-8-lineHeight);
   }
 }
