--- a/packages/ui/src/components/forms/select/subcomponents/select-chevron.css
+++ b/packages/ui/src/components/forms/select/subcomponents/select-chevron.css
@@ -1,6 +1,20 @@
 [data-slot="select-chevron"] {
   pointer-events: none;
-  background: red;
+  background: var(--input-background);
+  padding-inline-end: var(--formfield-paddingX);
   height: 100%;
   align-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  &:first-child {
+    border-top-left-radius: var(--input-border-radius);
+    border-bottom-left-radius: var(--input-border-radius);
+  }
+
+  &:last-child {
+    border-top-right-radius: var(--input-border-radius);
+    border-bottom-right-radius: var(--input-border-radius);
+  }
 }
