refactor: fudge select padding for now

--- a/packages/ui/src/components/forms/styles.css
+++ b/packages/ui/src/components/forms/styles.css
@@ -12,6 +12,7 @@
   /** TODO: be less hacky */
   &[uiid="select"] {
     height: calc(var(--formfield-height) - 2px);
+    padding-inline-end: calc(var(--formfield-paddingX) * 2 + 12px) !important;
   }
 
   &:where([data-size="sm"]) {
