--- a/packages/ui/src/components/forms/formfield/formfield.styles.css
+++ b/packages/ui/src/components/forms/formfield/formfield.styles.css
@@ -3,4 +3,8 @@
   flex-direction: column;
   align-items: start;
   gap: var(--input-label-wrapperGap);
+
+  [data-slot="formfield-slots"]:has([uiid="select"]) {
+    width: -webkit-fill-available;
+  }
 }
